--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "func() { node --experimental-modules ./src/GameOfLife.js }; func",
     "test": "func() { node --experimental-vm-modules node_modules/jest/bin/jest.js jest ./tests/ --verbose; }; func",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js jest ./tests/ --watch"
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js jest ./tests/ --watchAll"
   },
   "jshintConfig": {
     "esversion": 11
